# anything-llm

./: README.md  REPOSITORY_ANALYSIS.md  package.json
collector/: README.md  package.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT_WORKFLOW.md  SCRIPTS_AND_AUTOMATION.md
extras/qt-installer/: .gitignore  CMakeLists.txt  README.md
extras/qt-installer/resources/: installer.qrc
extras/qt-installer/src/: installerlogic.cpp  installerlogic.h  installerwindow.cpp  installerwindow.h  main.cpp
frontend/: README.md
scripts/: README.md  config.mjs  manage.mjs
scripts/lib/: cli.mjs  fs.mjs  output.mjs  process.mjs  which.mjs
server/: README.md  package.json
